# clawdbot-productivity-automation

./: .gitignore  AGENTS.md  BOOTSTRAP.md  README.md  SOUL.md  TOOLS.md  pyproject.toml
config/: application.example.yaml  qa_defaults.example.yaml  resume_template.example.md
scripts/: answer_application_question.py  bootstrap.sh  build_resume_for_job.py  openclaw_apply_handshake.sh  openclaw_setup.sh
skills/handshake-internship-autopilot/: SKILL.md
src/clawdbot_internship_automation/: cli.py  handshake_bot.py  llm.py  models.py  question_answerer.py  resume_builder.py  settings.py
tests/: test_question_answerer.py  test_settings.py
